contracts/credit/tests/snapshots/gas_snap_freeze__get_draws_freeze_reason_none.snap
---
source: contracts/credit/tests/gas_snap_freeze.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "get_draws_freeze_reason_none",
    cpu_instructions: 50288,
    memory_bytes: 7457,
}
