contracts/credit/tests/snapshots/gas_snap_freeze__get_draws_freeze_reason_some.snap
---
source: contracts/credit/tests/gas_snap_freeze.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "get_draws_freeze_reason_some",
    cpu_instructions: 61301,
    memory_bytes: 9525,
}
