contracts/credit/tests/snapshots/gas_snap_freeze__is_credit_line_frozen_false.snap
---
source: contracts/credit/tests/gas_snap_freeze.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "is_credit_line_frozen_false",
    cpu_instructions: 30600,
    memory_bytes: 5495,
}
