contracts/credit/tests/snapshots/gas_snap_freeze__is_credit_line_frozen_true.snap
---
source: contracts/credit/tests/gas_snap_freeze.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "is_credit_line_frozen_true",
    cpu_instructions: 48878,
    memory_bytes: 7730,
}
