contracts/credit/tests/snapshots/gas_snap_freeze__unfreeze_draws_when_not_frozen.snap
---
source: contracts/credit/tests/gas_snap_freeze.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "unfreeze_draws_when_not_frozen",
    cpu_instructions: 102713,
    memory_bytes: 15295,
}
